--- a/notebooks/google-over-meta-market-cap.ipynb
+++ b/notebooks/google-over-meta-market-cap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "5b156f7d-2b4f-43a5-ac5c-52b6ea759ada",
    "metadata": {
     "scrolled": true
@@ -20,6 +20,7 @@
     "import yfinance as yf\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "# Define the tickers\n",
     "tickers = [\"GOOGL\", \"META\"]\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "3b7d6e79-781b-4ea2-9149-9faaa9e841ed",
    "metadata": {},
    "outputs": [
@@ -42,198 +43,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
+      "[[5.36604996e+01 1.81419998e+02 5.36604996e+01 ... 1.77679993e+02\n",
+      "  3.17660000e+07 1.81519000e+07]\n",
+      " [5.45760002e+01 1.84669998e+02 5.45760002e+01 ... 1.81880005e+02\n",
+      "  3.13180000e+07 1.68866000e+07]\n",
+      " [5.47879982e+01 1.84330002e+02 5.47879982e+01 ... 1.84899994e+02\n",
+      "  2.60520000e+07 1.38809000e+07]\n",
+      " ...\n",
+      " [1.40369995e+02 3.57829987e+02 1.40369995e+02 ... 3.56070007e+02\n",
+      "  1.96286000e+07 1.32079000e+07]\n",
+      " [1.40229996e+02 3.58320007e+02 1.40229996e+02 ... 3.59700012e+02\n",
+      "  1.60457000e+07 1.17988000e+07]\n",
+      " [1.39690002e+02 3.53959991e+02 1.39690002e+02 ... 3.58989990e+02\n",
+      "  1.87272000e+07 1.49805000e+07]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Adj Close</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Close</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">High</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Low</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Open</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>META</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>META</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>META</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>META</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>META</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>META</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2018-01-02</th>\n",
-       "      <td>53.660500</td>\n",
-       "      <td>181.419998</td>\n",
-       "      <td>53.660500</td>\n",
-       "      <td>181.419998</td>\n",
-       "      <td>53.799000</td>\n",
-       "      <td>181.580002</td>\n",
-       "      <td>52.651001</td>\n",
-       "      <td>177.550003</td>\n",
-       "      <td>52.651001</td>\n",
-       "      <td>177.679993</td>\n",
-       "      <td>31766000</td>\n",
-       "      <td>18151900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-03</th>\n",
-       "      <td>54.576000</td>\n",
-       "      <td>184.669998</td>\n",
-       "      <td>54.576000</td>\n",
-       "      <td>184.669998</td>\n",
-       "      <td>54.805000</td>\n",
-       "      <td>184.779999</td>\n",
-       "      <td>53.671501</td>\n",
-       "      <td>181.330002</td>\n",
-       "      <td>53.696499</td>\n",
-       "      <td>181.880005</td>\n",
-       "      <td>31318000</td>\n",
-       "      <td>16886600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-04</th>\n",
-       "      <td>54.787998</td>\n",
-       "      <td>184.330002</td>\n",
-       "      <td>54.787998</td>\n",
-       "      <td>184.330002</td>\n",
-       "      <td>55.203999</td>\n",
-       "      <td>186.210007</td>\n",
-       "      <td>54.713001</td>\n",
-       "      <td>184.100006</td>\n",
-       "      <td>54.854500</td>\n",
-       "      <td>184.899994</td>\n",
-       "      <td>26052000</td>\n",
-       "      <td>13880900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-05</th>\n",
-       "      <td>55.514500</td>\n",
-       "      <td>186.850006</td>\n",
-       "      <td>55.514500</td>\n",
-       "      <td>186.850006</td>\n",
-       "      <td>55.679001</td>\n",
-       "      <td>186.899994</td>\n",
-       "      <td>55.090000</td>\n",
-       "      <td>184.929993</td>\n",
-       "      <td>55.172501</td>\n",
-       "      <td>185.589996</td>\n",
-       "      <td>30250000</td>\n",
-       "      <td>13574500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-08</th>\n",
-       "      <td>55.710499</td>\n",
-       "      <td>188.279999</td>\n",
-       "      <td>55.710499</td>\n",
-       "      <td>188.279999</td>\n",
-       "      <td>55.958000</td>\n",
-       "      <td>188.899994</td>\n",
-       "      <td>55.500000</td>\n",
-       "      <td>186.330002</td>\n",
-       "      <td>55.549999</td>\n",
-       "      <td>187.199997</td>\n",
-       "      <td>24644000</td>\n",
-       "      <td>17994700</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Adj Close                  Close                   High  \\\n",
-       "                GOOGL        META      GOOGL        META      GOOGL   \n",
-       "Date                                                                  \n",
-       "2018-01-02  53.660500  181.419998  53.660500  181.419998  53.799000   \n",
-       "2018-01-03  54.576000  184.669998  54.576000  184.669998  54.805000   \n",
-       "2018-01-04  54.787998  184.330002  54.787998  184.330002  55.203999   \n",
-       "2018-01-05  55.514500  186.850006  55.514500  186.850006  55.679001   \n",
-       "2018-01-08  55.710499  188.279999  55.710499  188.279999  55.958000   \n",
-       "\n",
-       "                              Low                   Open              \\\n",
-       "                  META      GOOGL        META      GOOGL        META   \n",
-       "Date                                                                   \n",
-       "2018-01-02  181.580002  52.651001  177.550003  52.651001  177.679993   \n",
-       "2018-01-03  184.779999  53.671501  181.330002  53.696499  181.880005   \n",
-       "2018-01-04  186.210007  54.713001  184.100006  54.854500  184.899994   \n",
-       "2018-01-05  186.899994  55.090000  184.929993  55.172501  185.589996   \n",
-       "2018-01-08  188.899994  55.500000  186.330002  55.549999  187.199997   \n",
-       "\n",
-       "              Volume            \n",
-       "               GOOGL      META  \n",
-       "Date                            \n",
-       "2018-01-02  31766000  18151900  \n",
-       "2018-01-03  31318000  16886600  \n",
-       "2018-01-04  26052000  13880900  \n",
-       "2018-01-05  30250000  13574500  \n",
-       "2018-01-08  24644000  17994700  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(type(data))\n",
+    "# print(type(data), \"\\n\", type(data[\"Close\"]['GOOGL']))\n",
     "# https://www.macrotrends.net/stocks/charts/GOOGL/alphabet/shares-outstanding\n",
     "googl_outstanding_shares = 13.571 * 10**9\n",
     "# https://www.macrotrends.net/stocks/charts/META/meta-platforms/shares-outstanding\n",
     "meta_outstanding_shares = 2.641 * 10**9\n",
     "\n",
     "data.head()\n",
+    "\n",
+    "np_arrays = data.to_numpy()\n",
+    "\n",
+    "print(np_arrays)\n",
     "# data[\"Marketcap\"] = pd.DataFrame(index=data.index)\n",
     "# data[\"Marketcap\"][\"GOOGL\"]= data[\"Close\"][\"GOOGL\"] * googl_outstanding_shares\n",
     "# data[\"Marketcap\"][\"META\"] = data[\"Close\"][\"META\"] * meta_outstanding_shares\n",
-    "# data.head()\n"
+    "# data.head()\n",
+    "\n",
+    "# print(type(data[\"Close\"][\"META\"][\"date\"]))\n"
    ]
   },
   {
@@ -267,22 +110,6 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3b50d42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f97f5a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
